Updated with Ant's inputs

--- a/app/views/_BASE.html
+++ b/app/views/_BASE.html
@@ -13,7 +13,7 @@
     <strong class="govuk-tag govuk-phase-banner__content__tag" style="background-color:#d4351c">
       PROTOTYPE
     </strong>
-    <span class="govuk-phase-banner__text new">
+    <span class="govuk-phase-banner__text">
       This is a <a href="https://en.wikipedia.org/wiki/Prototype">prototype</a>, not a real service. This page is for testing purposes only. (<a href="https://www.gov.uk/service-manual/design/making-prototypes">Why use prototypes?</a>)
     </span>
   </p>
