--- a/app/views/v1/condition.html
+++ b/app/views/v1/condition.html
@@ -1,5 +1,5 @@
 
-{% extends "_BASE.html" %}
+{% extends "../_BASE.html" %}
 
 {% block tomBread %}
 <a href="javascript:window.history.back()" class="govuk-back-link">Back</a>
@@ -25,6 +25,7 @@
           <li> loss or change to your sense of smell or taste </li>
         </ul>
         <p class="govuk-body"> Most people with coronavirus have at least one of these symptoms. </p>
+        <p class="govuk-body new"> If you have symptoms you should self-isolate for 10 days. </p>
         <form>
           <div class="govuk-!-margin-bottom-8 govuk-!-margin-top-6">
             <div class="govuk-form-group">
