--- a/app/views/v1/onset.html
+++ b/app/views/v1/onset.html
@@ -1,5 +1,5 @@
 
-{% extends "_BASE.html" %}
+{% extends "../_BASE.html" %}
 
 {% block tomBread %}
 <a href="javascript:window.history.back()" class="govuk-back-link">Back</a>
@@ -12,6 +12,7 @@
 
         <h1 class="govuk-heading-xl"> When did these symptoms start? </h1>
         <p class="govuk-body"> If you cannot remember the exact date, enter the date you think it was roughly. </p>
+        <p class="govuk-body new"> If you have symptoms you should self-isolate for 10 days from the day your symptoms started.</p>
         <form novalidate="novalidate">
           <div class="govuk-form-group">
             <fieldset role="group" class="govuk-fieldset">
