Missed a couple of things.

--- a/app/views/v1/isolate.html
+++ b/app/views/v1/isolate.html
@@ -16,12 +16,12 @@
         <p class="govuk-body">This helps stop the virus speading to other people.</p>
         <p class="govuk-body">Self-isolation is different to:</p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>social distancing &mdash; advice for everyone to avoid close contact with other people</li>
-          <li>sheilding &mdash; advice for people at high risk from coronavirus</li>
+          <li><a href="#">social distancing</a> &mdash; advice for everyone to avoid close contact with other people</li>
+          <li><a href="#">sheilding</a> &mdash; advice for people at high risk from coronavirus</li>
         </ul>
 
         <h2 class="govuk-heading-m">How to self-isolate</h2>
-        <p class="govuk-body">You must not leave your home if you are self-isolating</p>
+        <p class="govuk-body">You must not leave your home if you are self-isolating.</p>
         <p class="govuk-body">Don't:</p>
         <ul class="govuk-list govuk-list--bullet">
           <li>go to work, school or any public places - work from home if you can</li>
