Added the final confirmation page.

--- a/app/views/v1/isolate.html
+++ b/app/views/v1/isolate.html
@@ -33,7 +33,7 @@
 
         <p>There's <a href="#">support available to help you self-isolate</a>.</p>
 
-        <a href="#" type="submit" class="govuk-!-margin-top-4 govuk-button"> Continue booking a test</a>
+        <a href="trans" type="submit" class="govuk-!-margin-top-4 govuk-button"> Continue booking a test</a>
 
     </div><!-- /govuk-grid-column-two-thirds -->
   </div>
