Moving and adding a link to this.

--- a/app/views/v1/confirm.html
+++ b/app/views/v1/confirm.html
@@ -34,6 +34,13 @@
         </tbody>
       </table>
       <p>If you provided an email address, the pass has also been emailed to you.</p>
+
+<!-- NEW BIT -->
+      <div class="govuk-inset-text new">
+        If you have symptoms you should <a href="#">self-isolate</a > for 10 days. You can leave your home to get the test.
+      </div>
+<!-- / NEW BIT -->
+
       <p>When you arriver at the test site, show the security guard your QR code to be left through. You can show them your email pass, or a screenshot or printout of the QR code.</p>
       <p>If you cannot show your QR code, you can instead:</p>
       <ul class="govuk-list govuk-list--bullet">
@@ -43,11 +50,6 @@
       </ul>
       <p>But if you can, show your QR code as this makes entry easier and quicker.</p>
       <p>You must turn up to your appointment on time, as this will help other people to be tested on time too.</p>
-
-      <div class="govuk-inset-text new">
-        If you have symptoms you should self-isolate for 10 days. You can leave your home to get a test.
-      </div>
-
       <h2 class="govuk-heading-m">What you'll need to bring to the test site</h2>
       <ul class="govuk-list govuk-list--bullet">
         <li>a copy of your test site pass (and passes for any children getting a test) - have the QR code in the pass ready to display (on the email, printed off or as a screenshot) or it could delay your entry to the test site</li>
