--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,7 +7,9 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <p><a class="gem-c-button govuk-button govuk-button--start" role="button" href="/v1/index"> View prototype <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false"><path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path></svg></a></p>
+      <p><a class="gem-c-button govuk-button govuk-button--start" role="button" href="/v2/index"> View Prototype - v2<svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false"><path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path></svg></a></p>
+
+      <p><a class="" href="/v1/index"> Prototype – v1</a></p>
 
     </div>
   </div>
