Updates to original messaging from Ant.

--- a/app/views/v2/confirm.html
+++ b/app/views/v2/confirm.html
@@ -37,7 +37,7 @@
 
 <!-- NEW BIT -->
       <div class="govuk-inset-text new">
-        If you have symptoms you should <a href="#">self-isolate</a > for 10 days. You can leave your home to get the test.
+        If you have symptoms you should self-isolate by not leaving home for 10 days. You can leave your home to get the test.
       </div>
 <!-- / NEW BIT -->
 
