--- a/app/views/v2/index.html
+++ b/app/views/v2/index.html
@@ -28,7 +28,7 @@
       <p>You can also get a test for someone you live with if they have symptoms.</p>
 
       <div class="govuk-inset-text new">
-        If you have symptoms you should self-isolate for 10 days. You can leave your home to get a test.
+        If you have symptoms you should self-isolate by not leaving home for 10 days. You can leave your home to get a test.
       </div>
 
       <h3 class="govuk-heading-s" class="govuk-heading-s" id="if-youre-going-into-hospital">If you’re going into hospital</h3>
