--- a/app/views/v2/isolate.html
+++ b/app/views/v2/isolate.html
@@ -11,7 +11,7 @@
     <div class="govuk-grid-column-two-thirds">
 
         <h1 class="govuk-heading-xl"> Stay at home </h1>
-        <p class="govuk-body">Based on your answers you should self-isolate for 10 days from the day your symptoms started.</p>
+        <p class="govuk-body">Based on your answers you should be self-isolating. Self-isolation begins on the day symptoms start and continues for the next 10 full days.</p>
         <p class="govuk-body">Self-isolation is when you don't leave your home because you have or might have coronavirus.</p>
         <p class="govuk-body">This helps stop the virus speading to other people.</p>
         <p class="govuk-body">Self-isolation is different to:</p>
