--- a/app/views/v2/confirm.html
+++ b/app/views/v2/confirm.html
@@ -35,11 +35,11 @@
       </table>
       <p>If you provided an email address, the pass has also been emailed to you.</p>
 
-<!-- NEW BIT -->
+<!-- NEW CONTENT HERE - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
       <div class="govuk-inset-text new">
         If you have symptoms you should self-isolate by not leaving home for 10 days. You can leave your home to get the test.
       </div>
-<!-- / NEW BIT -->
+<!-- END NEW CONTENT  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
       <p>When you arriver at the test site, show the security guard your QR code to be left through. You can show them your email pass, or a screenshot or printout of the QR code.</p>
       <p>If you cannot show your QR code, you can instead:</p>
