--- a/app/views/v2/onset.html
+++ b/app/views/v2/onset.html
@@ -39,7 +39,9 @@
               </div>
             </fieldset>
           </div>
+<!-- NEW CONTENT HERE - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->          
           <p class="govuk-body new"> If you have symptoms you should self-isolate by not leaving home. Begin self-isolating the day your symptoms started and the next 10 full days.</p>
+<!-- END NEW CONTENT  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
           <a href="isolate" type="submit" class="govuk-!-margin-top-4 govuk-button"> Continue </a>
         </form>
 
