--- a/app/views/v3/isolate.html
+++ b/app/views/v3/isolate.html
@@ -10,28 +10,31 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-        <h1 class="govuk-heading-xl"> Stay at home </h1>
+        <h1 class="govuk-heading-xl">Self-isolate by not leaving home</h1>
         <p class="govuk-body">Based on your answers you should be self-isolating. Self-isolation begins on the day symptoms start and continues for the next 10 full days.</p>
-        <p class="govuk-body">Self-isolation is when you don't leave your home because you have or might have coronavirus.</p>
-        <p class="govuk-body">This helps stop the virus speading to other people.</p>
-        <p class="govuk-body">Self-isolation is different to:</p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li><a href="#">social distancing</a> &mdash; advice for everyone to avoid close contact with other people</li>
-          <li><a href="#">sheilding</a> &mdash; advice for people at high risk from coronavirus</li>
-        </ul>
 
-        <h2 class="govuk-heading-m">How to self-isolate</h2>
-        <p class="govuk-body">You must not leave your home if you are self-isolating.</p>
-        <p class="govuk-body">Don't:</p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li>go to work, school or any public places - work from home if you can</li>
-          <li>go out to get food and medicine – order it online or by phone, or ask someone to bring it to your home</li>
-          <li>have visitors in your home, including friends and family – except for people providing essential care</li>
-          <li>go on public transport or use taxis</li>
-          <li>go out to exercise – exercise at home or in your garden, if you have one</li>
-        </ul>
+        <p  class="govuk-body">Self-isolation is when you don't leave your home because you have or might have coronavirus. This helps stop the virus speading to other people.</p>
 
-        <p>There's <a href="#">support available to help you self-isolate</a>.</p>
+        <p  class="govuk-body">You can leave your home to get a test.</p>
+        <details class="govuk-details" data-module="govuk-details">
+          <summary class="govuk-details__summary">
+            <span class="govuk-details__summary-text">
+              How to self-isolate
+            </span>
+          </summary>
+          <div class="govuk-details__text">
+            <ul class="govuk-list govuk-list--bullet">
+              <li>Don't go to work, school or any public places - work from home if you can</li>
+              <li>Don't go out to get food and medicine – order it online or by phone, or ask someone to bring it to your home</li>
+              <li>Don't have visitors in your home, including friends and family – except for people providing essential care</li>
+              <li>Don't go on public transport or use taxis</li>
+              <li>Don't go out to exercise – exercise at home or in your garden, if you have one</li>
+            </ul>
+          </div>
+        </details>
+
+        <p class="govuk-body"></p>
+        <p>There's support available to help you self-isolate.</p>
 
         <a href="trans" type="submit" class="govuk-!-margin-top-4 govuk-button"> Continue booking a test</a>
 
