--- a/app/views/v3/condition.html
+++ b/app/views/v3/condition.html
@@ -26,7 +26,9 @@
         </ul>
         <p class="govuk-body"> Most people with coronavirus have at least one of these symptoms. </p>
 <!-- NEW CONTENT HERE - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-        <p class="govuk-body new"> If you have symptoms you should self-isolate by not leaving home for 10 days. </p>
+        <p class="govuk-body new">
+          {{ selfIsolationSentance }}
+        </p>
 <!-- END NEW CONTENT  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
         <form>
           <div class="govuk-!-margin-bottom-8 govuk-!-margin-top-6">
