--- a/app/views/v3/index.html
+++ b/app/views/v3/index.html
@@ -29,7 +29,7 @@
 
 <!-- NEW CONTENT HERE - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
       <div class="govuk-inset-text new">
-        If you have symptoms you should self-isolate by not leaving home for 10 days. You can leave your home to get a test.
+        {{ selfIsolationSentance }}
       </div>
 <!-- END NEW CONTENT  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
