--- a/app/views/v3/isolate.html
+++ b/app/views/v3/isolate.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-        <h1 class="govuk-heading-xl">Self-isolate by not leaving home</h1>
+        <h1 class="govuk-heading-xl">You should be self-isolating by not leaving home</h1>
         <p class="govuk-body">Based on your answers, you should be self-isolating. Self-isolation begins on the day symptoms start and continues for the next 10 full days.</p>
 
         <p  class="govuk-body">Self-isolation is when you don't leave your home because you have or might have coronavirus. This helps stop the virus speading to other people.</p>
