--- a/app/views/_BASE.html
+++ b/app/views/_BASE.html
@@ -7,7 +7,7 @@
   Get a coronavirus test
 {% endblock %}
 
-{% set selfIsolationSentance = "If you have symptoms, you should self-isolate immediately by not leaving home. Begin self-isolating the day your symptoms started and for the next 10 full days. You can only leave home to get a test." %}
+{% set selfIsolationSentance = "If you have symptoms, you and the people you live with should self-isolate immediately by not leaving home. Begin self-isolating the day your symptoms started and for the next 10 full days. You can only leave home to get a test." %}
 
 {% set selfIsolationSentance_confirm = "If you have symptoms, you and the people you live with should self-isolate immediately by not leaving home. Begin self-isolating the day your symptoms started and for the next 10 full days. You can only leave home to get a test." %}
 
