--- a/app/views/v3/confirm.html
+++ b/app/views/v3/confirm.html
@@ -37,7 +37,7 @@
 
 <!-- NEW CONTENT HERE - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
       <div class="govuk-inset-text new">
-        {{ selfIsolationSentance_confirm }}
+        If you have symptoms, you and the people you live with should <a href="">self-isolate</a> immediately by not leaving home. Begin self-isolating the day your symptoms started and for the next 10 full days. You can only leave home to get a test.
       </div>
 <!-- END NEW CONTENT  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
