A few more tweaks.

--- a/app/views/_BASE.html
+++ b/app/views/_BASE.html
@@ -7,7 +7,7 @@
   Get a coronavirus test
 {% endblock %}
 
-{% set selfIsolationSentance = "If you have symptoms, you and the people you live with should self-isolate immediately by not leaving home. Begin self-isolating the day your symptoms started and for the next 10 full days. You can only leave home to get a test." %}
+{% set selfIsolationSentance = "If you have symptoms, you and everyone you live with should self-isolate immediately by not leaving home. Begin self-isolating the day your symptoms started and for the next 10 full days. You can only leave home to get a test." %}
 
 {% block headIconsnot %}
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🙈</text></svg>">
