--- a/app/views/v3/confirm.html
+++ b/app/views/v3/confirm.html
@@ -37,7 +37,7 @@
 
 <!-- NEW CONTENT HERE - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
       <div class="govuk-inset-text new">
-        If you have symptoms, you and the people you live with should <a href="">self-isolate</a> immediately by not leaving home. Begin self-isolating the day your symptoms started and for the next 10 full days. You can only leave home to get a test.
+        If you have symptoms, you and everyone you live with should <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/self-isolation-and-treatment/when-to-self-isolate-and-what-to-do/">self-isolate</a> immediately by not leaving home. Begin self-isolating the day your symptoms started and for the next 10 full days. You can only leave home to get the test.
       </div>
 <!-- END NEW CONTENT  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
